unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/fields/ffps_ihs__BatchProcessId__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__BatchProcessId__c</fullName>
    <label>Batch Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>