unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/fields/ffps_ihs__Future__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Future__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future</label>
    <type>Checkbox</type>
</CustomField>