unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/fields/ffps_ihs__NoOfSuccesses__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__NoOfSuccesses__c</fullName>
    <label>No of Successes</label>
    <summaryFilterItems>
        <field>ffps_ihs__IntegrationLogLine__c.ffps_ihs__LineType__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>ffps_ihs__IntegrationLogLine__c.ffps_ihs__IntegrationLog__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>