unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/fields/ffps_ihs__Process__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>