unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/fields/ffps_ihs__Queueable__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>