unpackaged/main/default/objects/ffps_ihs__IntegrationLog__c/listViews/ffps_ihs__All1.listView-meta.xml
<ListView>
    <fullName>ffps_ihs__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>